Adiciona autoria a um Codelab

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <span>Atualizado em Nov 18, 2020</span>
               </div>
               <div class="card-footer">
+                <img class="author-avatar" src="images/authors/leite.jpg" title="Leandro Leite">
                 <div class="category-icon kotlin-icon"></div>
                 <paper-button class="kotlin-bg">Iniciar</paper-button>
               </div>
