--- a/codelabs/shared-tests/index.html
+++ b/codelabs/shared-tests/index.html
@@ -25,7 +25,7 @@
                   id="shared-tests"
                   title="Shared Tests"
                   environment="web"
-                  feedback-link="http://github.com/leanite">
+                  feedback-link="https://github.com/concretesolutions/concretesolutions.github.io">
     
       <google-codelab-step label="Introdução" duration="3">
         <p>Testes são extremamente importantes para o processo de desenvolvimento de Apps uma vez que, com eles, podemos antecipar problemas e validar o comportamento do nosso código, aumentando assim a confiança das nossas entregas. No Android temos três tipos de teste que podem ser definidos da seguinte forma:</p>
@@ -147,7 +147,7 @@ class MainActivityTest {
       </google-codelab-step>
     
       <google-codelab-step label="Conclusão" duration="1">
-        <p>Chegamos ao fim desse Codelab! Nele discutimos sobre boas práticas de teste, os benefícios de ter uma suíte de testes diversa e como implementar, através de um &#34;hack&#34;, testes tanto de Integração como de UI através de uma pasta &#34;sharedTests&#34;. Espero que no futuro, a Google possa adicionar uma solução nativa para esse tipo de implementação, para evitarmos desvantagens como ter que rodar nossos testes através de tasks.</p>
+        <p>Chegamos ao fim desse Codelab! Nele discutimos sobre algumas boas práticas de teste, os benefícios de ter uma suíte de testes diversa e como implementar, através de um &#34;hack&#34;, testes tanto de Integração como de UI através da pasta &#34;sharedTests&#34;. Ainda está com dúvida ou quer explorar melhor a implementação? Só acessar <a href="https://github.com/lyrafelipe/shared-demo" target="_blank">esse repositório</a>!</p>
 
 
       </google-codelab-step>
